@@ -1,0 +1,8 @@
+<?php
+
+/**
+ *
+ */
+abstract class Knowledgeroot_Module_Bootstrap_Abstract {
+
+}
