@@ -1,0 +1,12 @@
+<?php
+
+/**
+ * interface for module class
+ */
+interface Knowledgeroot_Module_Interface {
+
+	/**
+	 * return absolut path to module config
+	 */
+	public function getConfigPath();
+}
