@@ -1,0 +1,6 @@
+<?php
+
+/**
+ *
+ */
+class Knowledgeroot_ModuleManager_Exception extends Exception {}
