@@ -1,3 +1,6 @@
+20121128 - fhabermann
+* added first stuff for modules
+
 20121124 - fhabermann
 * added jump to anker on content new/edit or file upload/delete
 * added collapse for active content element
